Adding 4 new OptimizerMethods (ZigZag, FrontToBack, BackToFront, AisleMiddleWindow)
Co-authored-by: Patrick Molina <patrickmolina102@hotmail.com>